--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -103,7 +103,27 @@
 
 }
 
-@media(max-width: 550px) {
+@media(max-width: 720px) {
+
+  .slider-content {
+    .item {
+      max-width: 88%;
+    }
+
+    h2 {
+      font-size: 34px;
+      line-height: 28px;
+    }
+
+    p {
+      font-size: 24px;
+      line-height: 28px;
+    }
+  }
+
+}
+
+@media(max-width: 600px) {
 
   .slider-content {
     .item {
@@ -118,7 +138,7 @@
     }
 
     p {
-      font-size: 1.5em;
+      font-size: 20px;
       line-height: 23px;
     }
   }
